<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddStaffActivity"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:transitionName="transition_signup"
    android:id="@+id/AddStaff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgAddStaffBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:padding="5dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/txtAddStaffTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Staff"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_black"
                android:textSize="30sp"
                android:paddingLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgAddStaffBack"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtAddStaffPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Permission:"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"/>
                <RadioGroup
                    android:id="@+id/rgAddStaffPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:layout_toRightOf="@id/txtAddStaffPermission"
                    android:layout_centerVertical="true">

                    <RadioButton
                        android:id="@+id/rbAddStaffManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Manager"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <RadioButton
                        android:id="@+id/rbAddStaffStaff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Staff"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>
                </RadioGroup>
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddStaffFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fullname"
                app:startIconDrawable="@drawable/ic_baseline_create_pencil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddStaffUserame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddStaffEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddStaffPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddStaffPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txtAddStaffGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender:"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"/>
                <RadioGroup
                    android:id="@+id/rgAddStaffGender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:layout_toRightOf="@id/txtAddStaffGender"
                    android:layout_centerVertical="true">

                    <RadioButton
                        android:id="@+id/rbAddStaffMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:layout_marginRight="10dp"/>
                    <RadioButton
                        android:id="@+id/rbAddStaffFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:layout_marginRight="10dp"/>

                    <RadioButton
                        android:id="@+id/rbAddStaffOther"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Other" />
                </RadioGroup>
            </RelativeLayout>
            <DatePicker
                android:id="@+id/dpAddStaffDob"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnAddStaffAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:elevation="5dp"
            android:text="Add Staff"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"/>
    </LinearLayout>
</ScrollView>